# autoresearch-qwen

./: .gitignore  LICENSE  README.md  analysis.py  check_submission.py  evaluate.py  prepare.py  program.md  pyproject.toml  results.tsv  run_experiment.py  run_experiment.sh  submit_test.py  train.py
.github/workflows/: refresh-star-history-cache.yml
benchmarks/: README.md
configs/: zero2_offload.json
docs/: AUTORESEARCH_LOOP.md  LAUNCH_PLAN.md  PROJECT_THESIS.md
src/autoresearch_qwen/: __init__.py  cli.py  config.py  contracts.py  doctor.py  docvqa_eval.py  hub.py  project.py
src/autoresearch_qwen_mlx/: __init__.py  cli.py  config.py  docvqa.py  docvqa_eval.py  hub.py  project.py  scoring.py  submission.py
